WexGit/Wex_DX/force-app/main/default/objects/Forte_Integration__mdt/Forte_Integration__mdt.object-meta.xml
<CustomObject>
    <description>This will hold the endpoint and authentication details for the Forte Integration</description>
    <label>Forte Integration</label>
    <pluralLabel>Forte Integrations</pluralLabel>
</CustomObject>