WexGit/Wex_DX/force-app/main/default/objects/Forte_Integration__mdt/fields/API_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Access_Key__c</fullName>
    <label>API Access Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>