WexGit/Wex_DX/force-app/main/default/objects/Forte_Integration__mdt/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <label>Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>